Update repositor paragraph

--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
                 </div>
 
                 <p class="text-sm text-gray-500 mt-1">
-                    Los supervisores son personas responsables de gestionar y coordinar a los repositores a su cargo,
-                    asegurando el cumplimiento de las tareas asignadas y el correcto funcionamiento de los equipos de
-                    trabajo.
+                    Los repositores se encargan de ordenar y reponer la mercadería en las góndolas,
+                    garantizando la adecuada exhibición de los productos y el control de inventario,
+                    siguiendo las indicaciones de su supervisor.
                 </p>
             </div>
         </div>
