--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+
     <script type="module" src="./scripts/index.js"></script>
 
 </head>
@@ -94,6 +96,9 @@
 
         <div data-include="supervisores-table"></div>
         <div data-include="supervisor-modal"></div>
+
+        <div data-include="supervisados-modal"></div>
+
     </section>
 
     <section class="container px-6 py-10 mb-10 mx-auto bg-gray-50/50 border border-gray-200 rounded-lg shadow-sm">
